src/objects/BuildingCodeToHouseTypeMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Building_Type_Code__c</fullName>
        <description>Building codes as per the new Singpost format.
Eg, C01, C02</description>
        <inlineHelpText>Building codes as per the new Singpost format.
Eg, C01, C02</inlineHelpText>
        <label>Building Type Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Building_Type_Description__c</fullName>
        <description>Eg,
C01 - HDB
C02 - HDB HAWKER /FOOD CENTRE</description>
        <inlineHelpText>Eg,
C01 - HDB
C02 - HDB HAWKER /FOOD CENTRE</inlineHelpText>
        <label>Building Type Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Type__c</fullName>
        <description>House types which determin the delivery charges per subscription.
Only Accepted values &apos;H&apos;,&apos;C&apos;,&apos;L&apos;</description>
        <inlineHelpText>House types which determin the delivery charges per subscription.
Only Accepted values &apos;H&apos;,&apos;C&apos;,&apos;L&apos;</inlineHelpText>
        <label>House Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Building Code to house type mapping</label>
</CustomObject>